--- a/configs/network/dc-node-01-netplan.yaml
+++ b/configs/network/dc-node-01-netplan.yaml
@@ -1,1 +1,11 @@
+# Documentation example only
+network:
+  version: 2
+  ethernets:
+    enp0s3:
+      dhcp4: no
+      addresses: [192.168.56.10/24]
+    enp0s8:
+      dhcp4: no
+      addresses: [10.10.10.10/24]
 
